Fix Posion of Delete From Shake button
This commit adjusts the position of the "delete from shake" button to
no longer break out of the container.

fixes #182

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3106,8 +3106,8 @@ iframe {
   position: absolute;
   width: 21px;
   height: 21px;
-  top: 15px;
-  right: -5px;
+  top: 10px;
+  right: 10px;
 }
 
 @media screen and (min-width: 768px) {
